Tuesday, April 9, 2002		Ron Steinke <rsteinke@w-link.net>

	* (Continued work on MSVC++ workarounds).7

Tuesday, April 9, 2002		Ron Steinke <rsteinke@w-link.net>

	* (Continued work on MSVC++ workarounds).6

Tuesday, April 9, 2002		Ron Steinke <rsteinke@w-link.net>

	* (Continued work on MSVC++ workarounds).5

Tuesday, April 9, 2002		Ron Steinke <rsteinke@w-link.net>

	* (Continued work on MSVC++ workarounds).4

Tuesday, April 9, 2002		Ron Steinke <rsteinke@w-link.net>

	* (Continued work on MSVC++ workarounds).3

Tuesday, April 9, 2002		Ron Steinke <rsteinke@w-link.net>

	* (Continued work on MSVC++ workarounds).2

Tuesday, April 9, 2002		Ron Steinke <rsteinke@w-link.net>

	* Continued work on MSVC++ workarounds

Tuesday, April 9, 2002		Ron Steinke <rsteinke@w-link.net>

	* Started adding workarounds to compile with MSVC++
	* Started adding doxygen docs

Friday, March 24, 2002		Ron Steinke <rsteinke@w-link.net>

	* Tweaked the syntax of the new Parallel() function slightly

Thursday, March 23, 2002	Ron Steinke <rsteinke@w-link.net>

	* Finished Intersect(Polygon, Polygon). Now I've just got to
	  test all those intersection functions
	* Added Parallel() and Perpendicular() functions to compare the
	  orientation of two vectors
	* Incremented version number to 0.2.6

Tuesday, March 23, 2002		Ron Steinke <rsteinke@w-link.net>

	* Fixed bug with declaring the default value of the "proper"
	  argument of the intersection functions twice
	* Moved the function definitions for intersection-oriented
	  members of _Poly2Orient from polygon_funcs.h into
	  polygon_intersect.h
	* Wrote definitions for Contains(Polygon, AxisBox),
	  Contains(Polygon, RotBox), and Contains(Polygon, Polygon).
	  Got most of Intersect(Polygon, Polygon) done, except
	  for the case where the two planes containing the polygons
	  intersect in a line (the standard case in 3d)

Thursday, March 21, 2002	Ron Steinke <rsteinke@w-link.net>

	* Fixed Polygon<> intersection functions with AxisBox<> and