@@ -36,6 +36,11 @@ static bool _MatrixInverseImpl(const int size, CoordType* in, CoordType* out);
 #ifndef WFMATH_NO_CLASS_FUNCTION_SPECIALIZATION
 template<> RotMatrix<3>& RotMatrix<3>::fromQuaternion(const Quaternion& q,
 						      const bool not_flip)
+#else
+void WFMath::_NCFS_RotMatrix3_fromQuaternion(RotMatrix<3>& m, const Quaternion& q,
+					     const bool not_flip,
+					     CoordType m_elem[3][3], bool& m_flip)
+#endif
 {
   CoordType xx, yy, zz, xy, xz, yz;
   const Vector<3> &vref = q.vector();
@@ -61,21 +66,24 @@ template<> RotMatrix<3>& RotMatrix<3>::fromQuaternion(const Quaternion& q,
   m_elem[2][1] = 2 * (yz + wvec[0]);
 
   m_flip = !not_flip;
-
+#ifndef WFMATH_NO_CLASS_FUNCTION_SPECIALIZATION
   if(!not_flip)
     *this = Prod(*this, RotMatrix<3>().mirror(0));
 
   return *this;
-}
+#else
+  if(!not_flip)
+    m = Prod(m, RotMatrix<3>().mirror(0));
 #endif
+}
 
 #ifndef WFMATH_NO_CLASS_FUNCTION_SPECIALIZATION
 template<>
 RotMatrix<3>& WFMath::RotMatrix<3>::rotation (const Vector<3>& axis,
 					      CoordType theta)
 #else
-RotMatrix<3>& WFMath::_NCFS_RotMatrix3_rotation (RotMatrix<3>& m, const Vector<3>& axis,
-						 CoordType theta)
+void WFMath::_NCFS_RotMatrix3_rotation (RotMatrix<3>& m, const Vector<3>& axis,
+					CoordType theta)
 #endif
 {
   CoordType max = 0;
@@ -103,13 +111,16 @@ RotMatrix<3>& WFMath::_NCFS_RotMatrix3_rotation (RotMatrix<3>& m, const Vector<3
 #ifndef WFMATH_NO_CLASS_FUNCTION_SPECIALIZATION
   return rotation(v1, v2, theta);
 #else
-  return m.rotation(v1, v2, theta);
+  m.rotation(v1, v2, theta);
 #endif
 }
 
 #ifndef WFMATH_NO_CLASS_FUNCTION_SPECIALIZATION
 template<>
 RotMatrix<3>& WFMath::RotMatrix<3>::rotation (const Vector<3>& axis)
+#else
+void WFMath::_NCFS_Rotmatrix3_rotation(RotMatrix<3>& m, const Vector<3>& axis)
+#endif
 {
   CoordType max = 0;
   int main_comp = -1;
@@ -137,9 +148,12 @@ RotMatrix<3>& WFMath::RotMatrix<3>::rotation (const Vector<3>& axis)
   v1 = Cross(axis, tmp); // 3D specific part
   v2 = Cross(axis, v1);
 
+#ifndef WFMATH_NO_CLASS_FUNCTION_SPECIALIZATION
   return rotation(v1, v2, angle);
-}
+#else
+  m.rotation(v1, v2, angle);
 #endif
+}
 
 bool WFMath::_MatrixSetValsImpl(const int size, CoordType* vals, bool& flip,
 				CoordType* buf1, CoordType* buf2, double precision)
