@@ -1,3 +1,7 @@
+Wednesday, April 9, 2002		Ron Steinke <rsteinke@w-link.net>
+
+	* Hopefully have enough of wfmath working on msvc now to support eris
+
 Tuesday, April 9, 2002		Ron Steinke <rsteinke@w-link.net>
 
 	* (Continued work on MSVC++ workarounds).7
